# options-engine

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  RESULTS.md  benchmark.py  docker-compose.yml  requirements.txt  start.ps1  train_all.ps1
.github/workflows/: ci.yml
agent/: evaluate.py  evaluation_results.json  gpu_utils.py  historical_results.json  train.py  tune.py
agent/tuning/: best_params_sac_hedger_gbm.json  best_params_sac_hedger_heston.json  study.db
api/: main.py
backtester/: historical.py  vol_surface.py
dashboard/: app.py
environment/: baselines.py  market_sim.py  options_env.py
src/: bindings.cpp
src/pricer/: __init__.py  bs_pricer.hpp  mc_pricer.hpp  pricer_py.py
tests/: test_api.py  test_environment.py  test_pricer.py
